Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -297,15 +297,15 @@
 
       <div style="margin: 20px 0;">
         <a href="https://snappush.snapcompany.net/" target="_blank">
-          <img src="https://sspark.genspark.ai/cfimages?u1=qEe5cwWUwoGVxkbtMIxOwmnf6KeRp9STHEXK0yf%2FaDhKcSv%2FdYhMaRmqga1%2BuAe94NHhkds7%2F1YO88rPJC9BA9RYqSNcLYU%3D&amp;u2=NuHqBR9JC%2F0f22Tu&amp;width=2560" alt="스냅푸시 홈페이지" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); cursor: pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.02)'" onmouseout="this.style.transform='scale(1)'" data-height-listener-added="true">
+          <img src="https://sspark.genspark.ai/cfimages?u1=qEe5cwWUwoGVxkbtMIxOwmnf6KeRp9STHEXK0yf%2FaDhKcSv%2FdYhMaRmqga1%2BuAe94NHhkds7%2F1YO88rPJC9BA9RYqSNcLYU%3D&amp;u2=NuHqBR9JC%2F0f22Tu&amp;width=2560" alt="스냅푸시 홈페이지" style="width: 100%; border-radius: 8px; box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 8px; cursor: pointer; transition: transform 0.2s; transform: scale(1);" onmouseover="this.style.transform='scale(1.02)'" onmouseout="this.style.transform='scale(1)'" data-height-listener-added="true">
         </a>
       </div>
 
       <div class="metric-grid">
-        <div class="metric-item"><strong>설립</strong><br>2017년 6월</div>
-        <div class="metric-item"><strong>대표</strong><br>이민수</div>
-        <div class="metric-item"><strong>누적 고객사</strong><br>3,500개 (2024.10)</div>
-        <div class="metric-item"><strong>최근 투자</strong><br>210억원 시리즈B</div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">설립</span></strong><span style="color: rgb(0, 0, 0);">2017년 6월</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">대표</span></strong><br><span style="color: rgb(0, 0, 0);">이민수</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">누적 고객사</span></strong><br><span style="color: rgb(0, 0, 0);">3,500개 (2024.10)</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">최근 투자</span></strong><br><span style="color: rgb(0, 0, 0);">210억원 시리즈B</span></div>
       </div>
 
       <p><strong>시장 지위:</strong></p>
@@ -352,10 +352,10 @@
       </div>
 
       <div class="metric-grid">
-        <div class="metric-item"><strong>설립</strong><br>2016년 (합병)</div>
-        <div class="metric-item"><strong>대표</strong><br>박진영, 김범수</div>
-        <div class="metric-item"><strong>주소</strong><br>서울 중구 서소문로 89</div>
-        <div class="metric-item"><strong>백엔드</strong><br>스냅푸시 기술 활용</div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">설립</span></strong><span style="color: rgb(0, 0, 0);">2016년 (합병)</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">대표</span></strong><span style="color: rgb(0, 0, 0);">박진영, 김범수</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">주소</span></strong><br><span style="color: rgb(0, 0, 0);">서울 중구 서소문로 89</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">백엔드</span></strong><span style="color: rgb(0, 0, 0);">스냅푸시 </span>기술 활용</div>
       </div>
 
       <p><strong>서비스 특징:</strong></p>
@@ -372,7 +372,7 @@
     </div>
 
 
-    <h3><span class="icon">⚡</span>AI 기술 수준 비교</h3>
+    <h3><span class="icon">⚡</span><span style="color: rgb(255, 255, 255);">AI 기술 수준 비교</span></h3>
     <table>
       <thead>
         <tr>
@@ -416,7 +416,7 @@
       </tbody>
     </table>
 
-    <h3><span class="icon">🛒</span>구매 전환 세그먼트 상세 비교</h3>
+    <h3><span class="icon">🛒</span><span style="color: rgb(255, 255, 255);">구매 전환 세그먼트 상세 비교</span></h3>
     <table>
       <thead>
         <tr>
@@ -460,7 +460,7 @@
       </tbody>
     </table>
 
-    <h3><span class="icon">👑</span>VIP/충성 고객 세그먼트 비교</h3>
+    <h3><span class="icon">👑</span><span style="color: rgb(255, 255, 255);">VIP/충성 고객 세그먼트 비교</span></h3>
     <table>
       <thead>
         <tr>
@@ -498,7 +498,7 @@
       </tbody>
     </table>
 
-    <h3><span class="icon">🎯</span>행동 패턴 세그먼트 비교</h3>
+    <h3><span style="color: rgb(255, 255, 255);">🎯</span><span style="color: rgb(255, 255, 255);">행동 패턴 세그먼트 비교</span></h3>
     <table>
       <thead>
         <tr>
@@ -546,7 +546,7 @@
       <h2 style="margin: 0; border: none; padding: 0"><span class="icon">📊</span>3. 실제 활용 사례 비교</h2>
     </div>
 
-    <h3><span class="icon">🛒</span>장바구니 리마인드 캠페인 비교</h3>
+    <h3><span style="color: rgb(255, 255, 255);">🛒</span><span style="color: rgb(255, 255, 255);">장바구니 리마인드 캠페인 비교</span></h3>
 
     <div class="success-box">
       <h4><span class="icon">✅</span>스냅푸시 실행 케이스</h4>
@@ -563,10 +563,10 @@
       </ul>
 
       <div class="metric-grid">
-        <div class="metric-item"><strong>AI 선별 고객</strong><br>1,247명 (전체 4,582명 중 27%)</div>
-        <div class="metric-item"><strong>전환율</strong><br>23% (287명)</div>
-        <div class="metric-item"><strong>총 매출</strong><br>8,610,000원</div>
-        <div class="metric-item"><strong>ROAS</strong><br>4,305%</div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">AI 선별 고객</span></strong><br><span style="color: rgb(0, 0, 0);">1,247명 (전체 4,582명 중 27%)</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">전환율</span></strong><br><span style="color: rgb(0, 0, 0);">23% (287명)</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">총 매출</span></strong><br><span style="color: rgb(0, 0, 0);">8,610,000원</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">ROAS</span></strong><br><span style="color: rgb(0, 0, 0);">4,305%</span></div>
       </div>
     </div>
 
@@ -580,10 +580,10 @@
       </ul>
 
       <div class="metric-grid">
-        <div class="metric-item"><strong>전체 타겟</strong><br>4,582명</div>
-        <div class="metric-item"><strong>전환율</strong><br>9% (408명)</div>
-        <div class="metric-item"><strong>총 매출</strong><br>9,780,000원</div>
-        <div class="metric-item"><strong>ROAS</strong><br>2,173%</div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">전체 타겟</span></strong><br><span style="color: rgb(0, 0, 0);">4,582명</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">전환율</span></strong><br><span style="color: rgb(0, 0, 0);">9% (408명)</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">총 매출</span></strong><br><span style="color: rgb(0, 0, 0);">9,780,000원</span></div>
+        <div class="metric-item"><strong><span style="color: rgb(0, 0, 0);">ROAS</span></strong><br><span style="color: rgb(0, 0, 0);">2,173%</span></div>
       </div>
     </div>
 
@@ -634,7 +634,7 @@
       <h2 style="margin: 0; border: none; padding: 0"><span class="icon">📡</span>4. 8가지 메시지 채널 (동일)</h2>
     </div>
 
-    <p><strong>두 서비스 모두 동일 채널</strong> (스냅푸시 백엔드 기술)</p>
+    <p><strong><span style="color: rgb(255, 255, 255);">두 서비스 모두 동일 채널</span></strong><span style="color: rgb(255, 255, 255);"> (스냅푸시 백엔드 기술)</span></p>
 
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px; margin-top: 20px">
       <div style="background: #f0f9ff; padding: 20px; border-radius: 8px; border-left: 4px solid #2563eb;">
@@ -661,28 +661,54 @@
       <h2 style="margin: 0; border: none; padding: 0"><span class="icon">💰</span>5. ROI 시뮬레이션</h2>
     </div>
 
-    <h3>월 매출 5억원 쇼핑몰 기준</h3>
+    <h3><span style="color: rgb(255, 255, 255);">월 매출 5억원 쇼핑몰 기준</span></h3>
 
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px; margin-top: 20px">
       <div class="success-box">
         <h4><span class="icon">📈</span>스냅푸시 사용 시</h4>
         <div style="background: white; padding: 15px; border-radius: 8px; margin-top: 15px;">
           <div style="margin: 10px 0; padding: 10px; background: #f0fdf4; border-radius: 6px;">
-            <strong>매출 증가</strong><br>
-            <span style="font-size: 1.2em; color: #22c55e;">월 1.8억원 → 연간 21.6억원</span>
+            <strong><span style="color: rgb(0, 0, 0);">매출 증가</span></strong>
+            <span style="font-size: 1.2em; color: #22c55e;">월 1.8억원 <br>→ 연간 21.6억원</span>
           </div>
           <div style="margin: 10px 0; padding: 10px; background: #f0fdf4; border-radius: 6px;">
-            <strong>순이익 (마진 30%)</strong><br>
+            <strong><span style="color: rgb(0, 0, 0);">순이익 (마진 30%)</span></strong><br>
             <span style="font-size: 1.2em; color: #22c55e;">6.5억원</span>
           </div>
           <div style="margin: 10px 0; padding: 10px; background: #f8fafc; border-radius: 6px;">
-            <strong>연간 비용</strong><br>
-            <span style="font-size: 1.2em;">2,400만원</span>
+            <strong><span style="color: rgb(0, 0, 0);">연간 비용</span></strong><br>
+            <span style="font-size: 1.2em; color: rgb(0, 0, 0);">2,400만원</span>
           </div>
           <div style="margin: 10px 0; padding: 15px; background: #dcfce7; border-radius: 6px; border: 2px solid #22c55e;">
-            <strong>연간 ROI</strong><br>
-            <span style="font-size: 1.5em; color: #166534; font-weight: 700;">2,708% (27배) 🔥</span>
-          </div>
+            <strong><span style="color: rgb(0, 0, 0);">연간 ROI</span></strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+  
+    <!--StartFragment--><span style="
+        color: rgb(22, 101, 52);
+        font-family: Pretendard, 'Apple SD Gothic Neo', sans-serif;
+        font-size: 27px;
+        font-style: normal;
+        font-variant-ligatures: normal;
+        font-variant-caps: normal;
+        font-weight: 700;
+        letter-spacing: normal;
+        orphans: 2;
+        text-align: start;
+        text-indent: 0px;
+        text-transform: none;
+        widows: 2;
+        word-spacing: 0px;
+        -webkit-text-stroke-width: 0px;
+        white-space: normal;
+        background-color: rgb(220, 252, 231);
+        text-decoration-thickness: initial;
+        text-decoration-style: initial;
+        text-decoration-color: initial;
+        display: inline !important;
+        float: none;
+      ">🔥</span><!--EndFragment-->
+  
+
+<span style="font-size: 1.5em; color: rgb(22, 101, 52); font-weight: 700;">2,708% (27배)&nbsp;&nbsp;</span></div>
         </div>
       </div>
 
@@ -690,21 +716,18 @@
         <h4><span class="icon">📊</span>블룸에이아이 사용 시</h4>
         <div style="background: white; padding: 15px; border-radius: 8px; margin-top: 15px;">
           <div style="margin: 10px 0; padding: 10px; background: #fef3c7; border-radius: 6px;">
-            <strong>매출 증가</strong><br>
-            <span style="font-size: 1.2em; color: #92400e;">월 9천만원 → 연간 10.8억원</span>
-          </div>
+            <strong><span style="color: rgb(0, 0, 0);">매출 증가<br></span></strong>
+            <span style="font-size: 1.2em; color: #92400e;">월 9천만원<br></span><span style="color: rgb(146, 64, 14); font-size: 1.2em;">&nbsp;→ 연간 10.8억원</span></div>
           <div style="margin: 10px 0; padding: 10px; background: #fef3c7; border-radius: 6px;">
-            <strong>순이익 (마진 30%)</strong><br>
+            <strong><span style="color: rgb(0, 0, 0);">순이익 (마진 30%)</span></strong>
             <span style="font-size: 1.2em; color: #92400e;">3.2억원</span>
           </div>
           <div style="margin: 10px 0; padding: 10px; background: #f8fafc; border-radius: 6px;">
-            <strong>연간 비용</strong><br>
-            <span style="font-size: 1.2em;">2,400만원</span>
+            <strong><span style="color: rgb(0, 0, 0);">연간 비용</span></strong>
+            <span style="font-size: 1.2em; color: rgb(0, 0, 0);">2,400만원</span>
           </div>
           <div style="margin: 10px 0; padding: 15px; background: #fef3c7; border-radius: 6px; border: 2px solid #f59e0b;">
-            <strong>연간 ROI</strong><br>
-            <span style="font-size: 1.5em; color: #92400e; font-weight: 700;">1,333% (13.3배)</span>
-          </div>
+            <strong><span style="color: rgb(0, 0, 0);">연간 ROI</span></strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<span style="font-size: 1.5em; color: rgb(146, 64, 14); font-weight: 700;">1,333% (13.3배)</span></div>
         </div>
       </div>
     </div>
@@ -721,7 +744,7 @@
       <h2 style="margin: 0; border: none; padding: 0"><span class="icon">💡</span>6. 결론 및 선택 가이드</h2>
     </div>
 
-    <h3><span class="icon">⭐</span>핵심 차이점 요약</h3>
+    <h3><span class="icon">⭐</span><span style="color: rgb(255, 255, 255);">핵심 차이점 요약</span></h3>
 
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px">
       <div class="success-box">
@@ -745,7 +768,7 @@
       </div>
     </div>
 
-    <h3><span class="icon">📋</span>선택 기준표</h3>
+    <h3><span style="color: rgb(255, 255, 255);">📋</span><span style="color: rgb(255, 255, 255);">선택 기준표</span></h3>
     <table>
       <thead>
         <tr>
@@ -808,22 +831,22 @@
       <h2 style="margin: 0; border: none; padding: 0"><span class="icon">📚</span>7. 참고 자료</h2>
     </div>
 
-    <h3>공식 웹사이트</h3>
+    <h3 style="background-color: rgb(44, 75, 137);"><span style="color: rgb(255, 255, 255);">공식 웹사이트</span></h3>
     <ul>
       <li>
-        <strong>스냅푸시:</strong> <a href="https://snappush.snapcompany.net/">https://snappush.snapcompany.net/</a>
+        <strong style="background-color: rgb(44, 75, 137);"><span style="color: rgb(255, 255, 255);">스냅푸시:</span></strong> <a href="https://snappush.snapcompany.net/" style="background-color: rgb(44, 75, 137);"><span style="color: rgb(255, 255, 255);">https://snappush.snapcompany.net/</span></a>
       </li>
       <li>
-        <strong>블룸에이아이:</strong>
-        <a href="https://blumn.ai/product-sub/smsgplus">https://blumn.ai/product-sub/smsgplus</a>
+        <strong style="background-color: rgb(44, 75, 137);"><span style="color: rgb(255, 255, 255);">블룸에이아이:</span></strong>
+        <a href="https://blumn.ai/product-sub/smsgplus" style="background-color: rgb(44, 75, 137);"><span style="color: rgb(255, 255, 255);">https://blumn.ai/product-sub/smsgplus</span></a>
       </li>
       <li>
-        <strong>카페24 스토어:</strong>
-        <a href="https://store.cafe24.com/apps/1261">https://store.cafe24.com/apps/1261</a>
+        <strong style="background-color: rgb(44, 75, 137);"><span style="color: rgb(255, 255, 255);">카페24 스토어:</span></strong>
+        <a href="https://store.cafe24.com/apps/1261" style="background-color: rgb(44, 75, 137);"><span style="color: rgb(255, 255, 255);">https://store.cafe24.com/apps/1261</span></a>
       </li>
     </ul>
 
-    <h3>검증된 언론 보도</h3>
+    <h3><span style="color: rgb(255, 255, 255); background-color: rgb(44, 75, 137);">검증된 언론</span><span style="color: rgb(255, 255, 255);"> 보도</span></h3>
     <div style="background: #f8fafc; padding: 20px; border-radius: 8px; border-left: 4px solid #2563eb;">
       <ul style="line-height: 2; margin: 0;">
         <li><strong>데일리한국</strong> (2024.10.30) - 210억 투자 유치</li>
@@ -834,23 +857,23 @@
       </ul>
     </div>
 
-    <h3>문의처</h3>
+    <h3><span style="color: rgb(255, 255, 255);">문의처</span></h3>
     <div class="metric-grid">
       <div class="metric-item">
-        <strong>스냅컴퍼니</strong><br>
-        전화: 02-2038-4329<br>
-        이메일: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="1f6c6a6f6f706d6b5f6c717e6f6976317c7031746d">[email&#160;protected]</a>
-      </div>
+        <strong><span style="color: rgb(0, 0, 0);">스냅컴퍼니</span></strong><br><span style="color: rgb(0, 0, 0);">
+        전화: 02-2038-4329</span><br><span style="color: rgb(0, 0, 0);">
+        이메일: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="7b080e0b0b14090f3b08151a0b0d12551814551009">[email&#160;protected]</a>
+      </span></div>
       <div class="metric-item">
-        <strong>관리자 페이지</strong><br>
-        <a href="https://push.admin.snapfit.co.kr/">https://push.admin.snapfit.co.kr/</a>
+        <strong><span style="color: rgb(0, 0, 0);">관리자 페이지</span></strong><br>
+        <a href="https://push.admin.snapfit.co.kr/"><span style="color: rgb(0, 0, 0);">https://push.admin.snapfit.co.kr/</span></a>
       </div>
     </div>
 
     <div class="footer-info">
-      <p><strong>보고서 작성일:</strong> 2024년 11월 20일</p>
-      <p><strong>버전:</strong> Final (2사 비교 전용)</p>
-      <p><strong>비교 대상:</strong> 스냅푸시 vs 블룸에이아이 (2개사만)</p>
+      <p><strong><span style="color: rgb(0, 0, 0);">보고서 작성일:</span></strong><span style="color: rgb(0, 0, 0);"> 2024년 11월 20일</span></p>
+      <p><strong><span style="color: rgb(0, 0, 0);">버전:</span></strong><span style="color: rgb(0, 0, 0);"> Final (2사 비교 전용)</span></p>
+      <p><strong><span style="color: rgb(0, 0, 0);">비교 대상:</span></strong><span style="color: rgb(0, 0, 0);"> 스냅푸시 vs 블룸에이아이 (2개사만)</span></p>
     </div>
   
 
